style to prevent covering add pin button

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -126,7 +126,11 @@ h2#title {
 }
 
 #future-wrapper{
-  bottom:50px;
+  bottom:120px;
+}
+
+#past-wrapper{
+  bottom:60px;
 }
 
 #filter-button-past {
